# OBSPlugin

./: .clang-format  CMakeLists.txt  CMakePresets.json  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  ptzoptics-build-windows.cmd
.github/workflows/: build-project.yaml
build-aux/: run-clang-format
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake
cmake/windows/: compilerconfig.cmake  defaults.cmake  helpers.cmake
src/: PTZController.cpp  PTZController.h  joystickwrapper.cpp  joystickwrapper.h  mainwindow.cpp
src/SDL2-2.28.2/cmake/: sdl2-config.cmake
